--- a/qr-code-component-main/assets/css/style.css
+++ b/qr-code-component-main/assets/css/style.css
@@ -27,33 +27,47 @@ body {
 	background: var(--clr-lightGray);
 	min-height: 100vh;
 }
+
+
+
 .card {
 	display: grid;
 	gap: 24px;
 	background: var(--clr-white);
-	width: 290px;
-	padding: 16px;
+	width: 288px;
+	padding: 16px 16px 41px 16px;
 	border-radius: 20px;
-	box-shadow: hsla(0, 0%, 0%, 5%) 0 1rem 2rem;
+	box-shadow: hsla(0, 0%, 0%, 5%) 0 25px 32px;
 }
+
+
+
 img {
 	width: 100%;
 	border-radius: 10px;
 }
+
+
+
 .textCon {
 	display: grid;
-	gap: 16px;
-	padding-inline: 16px;
-	margin-bottom: 24px;
+	justify-items: center;
+	gap: 15px;
+}
+h3,
+p {
 	text-align: center;
 }
 h3 {
 	color: var(--clr-darkBlue);
 	font-size: 22px;
 	font-weight: 700;
+	letter-spacing: .075px;
 }
 p {
 	color: var(--clr-grayishBlue);
+	max-width: 26ch;
 	font-size: 15px;
 	font-weight: 400;
+	letter-spacing: .22px;
 }
