--- a/src/output.css
+++ b/src/output.css
@@ -666,6 +666,11 @@ video {
   font-size: 22px;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
